# krjobs-scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt  server.py
.claude/: current-context.md  hooks.json
.claude/plans/: github-actions-automation-2026-02-03.md  playwright-scraper-2026-02-02.md  scraper-implementation-plan.md
.claude/rules/: scrapers.md  sheets.md
.github/workflows/: daily-scrape.yml
docs/: jobs_scraper.md
src/: __init__.py
src/models/: __init__.py  job_posting.py
src/scrapers/: __init__.py  base.py  klik.py  komate.py  kowork.py
src/storage/: __init__.py  local_storage.py  supabase_storage.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_models.py  test_storage.py
